--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 aiofiles==24.1.0
-aiogram==3.19.0
+aiogram>=3.0.0,<4.0.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
 annotated-types==0.7.0
-asgiref==3.8.1
+asgiref~=3.7.2
 attrs==25.3.0
 certifi==2025.1.31
 dj-database-url==2.1.0
-Django==5.1.7
+Django>=4.0,<5.0
 frozenlist==1.5.0
 idna==3.10
 magic-filter==1.0.12
@@ -16,15 +16,21 @@ multidict==6.2.0
 pillow==11.1.0
 propcache==0.3.0
 psycopg==3.2.6
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.6
 pyaes==1.6.1
 pyasn1==0.6.1
 pydantic==2.10.6
 pydantic_core==2.27.2
-python-dotenv==1.0.1
+python-dotenv>=1.0.0
 qrcode==8.0
 rsa==4.9
-sqlparse==0.5.3
-Telethon==1.39.0
+sqlparse>=0.4.3
+Telethon>=1.28.5
 typing_extensions==4.12.2
 yarl==1.18.3
+django-crispy-forms>=2.0,<3.0
+crispy-bootstrap5>=0.7
+django-dbbackup>=4.0.2
+cryptg
+beautifulsoup4>=4.11.0
+requests>=2.28.1
