--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 asgiref==3.8.1
 attrs==25.3.0
 certifi==2025.1.31
+dj-database-url==2.1.0
 Django==5.1.7
 frozenlist==1.5.0
 gunicorn==22.0.0
@@ -27,4 +28,5 @@ rsa==4.9
 sqlparse==0.5.3
 Telethon==1.39.0
 typing_extensions==4.12.2
+whitenoise==6.6.0
 yarl==1.18.3
