--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "c:\\Users\\domik\\OneDrive\\Рабочий стол\\parsing_group_tg\\venv\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\domik\\OneDrive\\Рабочий стол\\parsing_group_tg\\venv\\Scripts\\python.exe",
+    "editor.language.brackets": [
+        
+    ]
 }
