--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ propcache==0.3.0
 psycopg==3.2.6
 psycopg-binary==3.2.6
 pyaes==1.6.1
-pyasn1==0.6.1
+pyasn1==0.6.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.0.1
@@ -28,5 +28,6 @@ rsa==4.9
 sqlparse==0.5.3
 Telethon==1.39.0
 typing_extensions==4.12.2
+uvicorn==0.30.1
 whitenoise==6.6.0
 yarl==1.18.3
