--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==25.3.0
 certifi==2025.1.31
 Django==5.1.7
 frozenlist==1.5.0
+gunicorn==21.2.0
 idna==3.10
 magic-filter==1.0.12
 multidict==6.2.0
