--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,15 @@ annotated-types==0.7.0
 asgiref==3.8.1
 attrs==25.3.0
 certifi==2025.1.31
-Django>=4.2.0,<5.1.0
+Django>=5.0.0
 frozenlist==1.5.0
 gunicorn>=21.2.0
 idna==3.10
 magic-filter==1.0.12
 multidict==6.2.0
-pillow==11.1.0
+pillow>=10.0.0
 propcache==0.3.0
-psycopg2-binary>=2.9.9
+psycopg2-binary>=2.9.5
 pyaes==1.6.1
 pyasn1==0.6.1
 pydantic==2.10.6
@@ -24,11 +24,12 @@ python-dotenv>=1.0.0
 qrcode==8.0
 rsa==4.9
 sqlparse==0.5.3
-Telethon>=1.34.0
+Telethon>=1.28.5
 typing_extensions==4.12.2
 uvicorn==0.27.1
-whitenoise>=6.6.0
+whitenoise>=6.0.0
 yarl==1.18.3
 dj-database-url>=2.1.0
 python-telegram-bot>=20.7
 django-compressor>=4.4
+requests>=2.0.0
