--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ gunicorn>=21.2.0
 idna==3.10
 magic-filter==1.0.12
 multidict==6.2.0
-pillow>=10.0.0
+pillow==10.0.0
 propcache==0.3.0
 psycopg2-binary>=2.9.5
 pyaes==1.6.1
