--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,27 @@
-aiofiles==24.1.0
-aiogram>=3.7.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.14
-aiosignal==1.3.2
-annotated-types==0.7.0
-asgiref==3.8.1
-attrs==25.3.0
-certifi==2025.1.31
-Django>=5.0.0
-frozenlist==1.5.0
-gunicorn>=21.2.0
-idna==3.10
-magic-filter==1.0.12
-multidict==6.2.0
-pillow==10.0.0
-propcache==0.3.0
-psycopg2-binary>=2.9.5
-pyaes==1.6.1
-pyasn1==0.6.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-python-dotenv>=1.0.0
-qrcode==8.0
-rsa==4.9
-sqlparse==0.5.3
-Telethon>=1.28.5
-typing_extensions==4.12.2
-uvicorn==0.27.1
-whitenoise>=6.0.0
-yarl==1.18.3
-dj-database-url>=2.1.0
-python-telegram-bot>=20.7
-django-compressor>=4.4
-requests>=2.0.0
-django==5.0
-telethon==1.33.1
+# Django and REST Framework
+Django==5.0.4
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+django-filter==23.5
+
+# Database
 psycopg2-binary==2.9.9
-cryptg==0.4.0
+
+# Telegram API
+Telethon==1.28.5
+python-telegram-bot==20.7
+
+# Web server and deployment
+gunicorn==21.2.0
 whitenoise==6.6.0
+dj-database-url==2.1.0
+
+# Utilities
+pillow==10.0.0
 python-dotenv==1.0.0
-django-bootstrap5==23.3
-django-crispy-forms==2.1
 requests==2.31.0
-pytz==2023.3
-pymediainfo==6.0.1
+urllib3==2.0.7
+asgiref==3.8.1
+
+# Production tools
+supervisor==4.2.5
