--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,58 @@
 # Django and REST Framework
-Django==5.0.4
+Django>=5.0.0
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
 
 # Database
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.5
 
 # Telegram API
-Telethon==1.28.5
-python-telegram-bot==20.7
+Telethon>=1.28.5
+python-telegram-bot>=20.7
+cryptg==0.4.0  # TGCrypto alternative, helps with faster downloads
 
 # Web server and deployment
-gunicorn==21.2.0
-whitenoise==6.6.0
-dj-database-url==2.1.0
+gunicorn>=21.2.0
+whitenoise>=6.0.0
+dj-database-url>=2.1.0
 
 # Utilities
 pillow==10.0.0
-python-dotenv==1.0.0
-requests==2.31.0
+python-dotenv>=1.0.0
+requests>=2.0.0
 urllib3==2.0.7
 asgiref==3.8.1
 
 # Production tools
 supervisor==4.2.5
+
+# Media handling
+django-bootstrap5==23.3
+django-crispy-forms==2.1
+pytz==2023.3
+aiofiles==24.1.0
+aiogram>=3.7.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+annotated-types==0.7.0
+attrs==25.3.0
+certifi==2025.1.31
+frozenlist==1.5.0
+idna==3.10
+magic-filter==1.0.12
+multidict==6.2.0
+propcache==0.3.0
+pyaes==1.6.1
+pyasn1==0.6.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+qrcode==8.0
+rsa==4.9
+sqlparse==0.5.3
+typing_extensions==4.12.2
+uvicorn==0.27.1
+yarl==1.18.3
+django-compressor>=4.4
+pymediainfo==6.0.1  # For media file metadata
