--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -4,6 +4,7 @@ psycopg2-binary==2.9.9
 dj-database-url==2.1.0
 python-dotenv==1.0.0
 requests>=2.0.0
+Pillow==10.1.0  # Для обробки зображень
 
 # Телеграм API
 Telethon==1.32.1
