--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -3,6 +3,7 @@ Django==4.2.10
 psycopg2-binary==2.9.9
 dj-database-url==2.1.0
 python-dotenv==1.0.0
+setuptools>=65.5.1  # Для pkg_resources
 requests>=2.0.0
 Pillow==10.1.0  # Для обробки зображень
 
