--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
 
-# Database
+# Database - Ensure psycopg2 is installed
 psycopg2-binary==2.9.9
+psycopg2==2.9.9  # Add regular psycopg2 as well in case binary doesn't work
 
 # Telegram API
 Telethon==1.32.1
