--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # Django settings
 DEBUG=False
-SECRET_KEY=your_django_secret_key
-ALLOWED_HOSTS=.railway.app,your-app-name.up.railway.app
+SECRET_KEY=/QoXhzTJkyhzSKccxR+XV0pf4T2zqLfXzPlSwegi6Cs=
+ALLOWED_HOSTS=parsinggrouptg-production.up.railway.app,*.railway.app,localhost,127.0.0.1
 
 # Database settings - Railway automatically provides DATABASE_URL
 DATABASE_URL=postgresql://postgres:password@localhost:5432/railway
 
 # Telegram Bot settings
-BOT_TOKEN=your_telegram_bot_token
+BOT_TOKEN=7923260865:AAGYew9JnOJV6hz0LGeRCb1kS6AejHoX61g
 
 # Telethon settings (for user account)
-API_ID=your_telegram_api_id
-API_HASH=your_telegram_api_hash
+API_ID=19840544
+API_HASH=c839f28bad345082329ec086fca021fa
 SESSION_NAME=telethon_session
 
 # Web server settings
@@ -19,4 +19,22 @@ WEB_SERVER_HOST=0.0.0.0
 WEB_SERVER_PORT=${PORT}
 
 # Railway specific
-PORT=8000 
+PORT=8080
+
+# Telegram Bot Admin
+ADMIN_ID=574349489
+
+# Database Configuration
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=railway
+PGUSER=postgres
+PGPASSWORD=password
+
+# Web Server Configuration
+PUBLIC_URL=https://parsinggrouptg-production.up.railway.app
+RAILWAY_PUBLIC_DOMAIN=parsinggrouptg-production.up.railway.app
+
+# Admin Credentials
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=password 
