--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -4,6 +4,7 @@ psycopg2-binary==2.9.9
 dj-database-url==2.1.0
 python-dotenv==1.0.0
 setuptools>=65.5.1  # Для pkg_resources
+wheel>=0.43.0  # Для правильної збірки пакетів
 requests>=2.0.0
 Pillow==10.1.0  # Для обробки зображень
 
@@ -11,6 +12,7 @@ Pillow==10.1.0  # Для обробки зображень
 Telethon==1.32.1
 aiofiles~=23.2.1  # Сумісність з aiogram
 aiogram==3.2.0
+pyaes==1.6.1  # Dependency required by Telethon
 
 # Веб-сервер
 gunicorn==21.2.0
