--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "chmod +x railway_fix.sh railway_health.py && python manage.py collectstatic --noinput"
+buildCommand = "chmod +x railway_fix.sh railway_health.py start_services.sh && python manage.py collectstatic --noinput"
 
 [deploy]
-startCommand = "python railway_health.py & bash railway_fix.sh && gunicorn core.wsgi --log-file -"
+startCommand = "bash start_services.sh"
 healthcheckPath = "/health.html"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
