--- a/railway.toml
+++ b/railway.toml
@@ -1,17 +1,34 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "echo 'Building application...'"
+buildCommand = "pip install -r requirements.txt && python manage.py collectstatic --noinput"
 
 [deploy]
-startCommand = "bash start_services.sh"
-healthcheckPath = "/health.html"
+startCommand = "python start_bot.py"
+healthcheckPath = "/health"
 healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 5
+restartPolicyType = "ALWAYS"
+
+[phases.setup]
+nixPkgs = ["python310", "gcc"]
 
 [metrics]
-port = 3000
+port = 8080
 path = "/metrics"
+
+[settings]
+region = "eu-central-1" # виберіть найближчу до України
+
+# Змінні середовища
+[envs]
+PORT.default = "8080"
+BOT_TOKEN.default = "8102516142:AAFTsVXXujHHKoX2KZGqZXBHPBznfgh7kg0"
+BOT_USERNAME.default = "chan_parsing_mon_bot"
+API_ID.default = "19840544"
+API_HASH.default = "c839f28bad345082329ec086fca021fa"
+WORKER_COUNT.default = "1"
+DEBUG.default = "False"
+DJANGO_SECRET_KEY.default = "Myw0djF8ejNlKjU2ZHlxJcOBgcSBNSwbygVvYRUjPeIGGxIIl" # змініть на власний
+ADMIN_ID.default = "574349489"
 
 [[services]]
 name = "web"
@@ -23,7 +40,4 @@ internal = false
 name = "health"
 port = 3000
 protocol = "http"
-internal = false
-
-[phases.setup]
-nixPkgs = ["python311", "postgresql", "gcc", "lsof", "netcat", "procps"] 
+internal = false 
