--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 # Django and REST Framework
-Django>=5.0.1
+Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
-dj-database-url==2.3.0
+dj-database-url==2.1.0
 
 # Database - Ensure psycopg2 is installed
-psycopg2-binary>=2.9.9
+psycopg2-binary==2.9.7
 psycopg2==2.9.9  # Add regular psycopg2 as well in case binary doesn't work
 
 # Telegram API
-Telethon==1.32.1
+Telethon==1.29.2
 python-telegram-bot==20.7
 cryptg==0.4.0  # TGCrypto alternative, helps with faster downloads
 
 # Web server and deployment
 gunicorn>=21.2.0
-whitenoise>=6.6.0
+whitenoise==6.5.0
 
 # Utilities
-Pillow==10.1.0
-python-dotenv>=1.0.0
-requests>=2.0.0
+Pillow==10.0.1
+python-dotenv==1.0.0
+requests==2.31.0
 urllib3==2.0.7
 asgiref==3.7.2
 
@@ -83,3 +83,5 @@ django-csp==3.7
 eventlet==0.35.2
 
 telethon>=1.34.0
+
+async-timeout==4.0.3
