--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -6,4 +6,7 @@ python-telegram-bot==20.4
 telethon==1.33.1
 asyncio==3.4.3
 psutil==5.9.6
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
+django-storages==1.14.2 
