--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ python-telegram-bot==20.4
 telethon==1.33.1
 asyncio==3.4.3
 psutil==5.9.6
+python-dotenv==1.0.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
+django-storages==1.14.2
 aiohttp==3.9.1
 aiosignal==1.3.1
 anyio==3.7.1
@@ -22,12 +26,10 @@ idna==3.4
 multidict==6.0.4
 pyaes==1.6.1
 pyasn1==0.5.0
-python-dotenv==1.0.0
 requests==2.31.0
 rsa==4.9
 sniffio==1.3.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 urllib3==2.1.0
-whitenoise==6.6.0
 yarl==1.9.2 
